Changed the "Our Partners" to "Our Sponsors" and made that block to be scrollable Changed all the sections that can be auto generated to be scrollable Fixed the phone number wrapping around issue in iPad portrait mode on the secondary page

--- a/YF/style.css
+++ b/YF/style.css
@@ -600,9 +600,11 @@ footer .row {
 }
 .sponsor-bar {
     min-height: 141px;
+    height: 141px;
     background-color: #474747;
     margin-left: -15px;
     margin-right: 15px;
+    overflow-y: scroll;
 }
 .no-padding {
     padding: 0;
